# friday-report

./: 1. Introduction.md  2. A taste of Haskell.md  3. A typed image processing framework.md  4. A composable image framework.md  4. Composable image algorithms.md  5. Perspectives and conclusion.md  README.md  SUMMARY.md
example/: Main.hs  friday-report-example.cabal
